--- a/Week 6 (AXIOS API)/Splash App/style.css
+++ b/Week 6 (AXIOS API)/Splash App/style.css
@@ -3,7 +3,7 @@ body {
 }
 
 #search-section {
-    height: 50vh;
+    height: 70vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -30,5 +30,29 @@ body {
 
 #photo-section {
     background: rgb(243, 242, 242);
-    height: 100%;
+
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+
+
+    /* overflow: auto; */
+    /* height: 30vh; */
+
+
+    gap: 10px;
+}
+
+
+#photo-section div img {
+    width: 100%;
+    margin-bottom: 10px;
+}
+
+#photo-section div {
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+    padding: 10px;
+}
+
+#photo-section time {
+    margin-top: 8px;
 }
